--- a/src/App.css
+++ b/src/App.css
@@ -2,6 +2,11 @@
   text-align: center;
 }
 
+.log{
+  align-content: center;
+  padding-top: 200px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
